example/lib/src/generated/errors/errors_localization_de.dart
// This file is generated by the Google Sheets localization tool. Do not edit manually.

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for German (`de`).
class ErrorsLocalizationDe extends ErrorsLocalization {
  ErrorsLocalizationDe([String locale = 'de']) : super(locale);

  @override
  String get error => 'Ein Fehler ist aufgetreten';

  @override
  String get unexpectedError => 'Ein unerwarteter Fehler ist aufgetreten';

  @override
  String authErrorMessages(String errorCode) {
    String _temp0 = intl.Intl.selectLogic(
      errorCode,
      {
        'passwordLengthError':
            'Das Passwort muss mindestens 6 Zeichen lang sein',
        'invalidEmailOrPhoneNumberError':
            'Bitte geben Sie eine gültige E-Mail-Adresse oder eine Telefonnummer im internationalen Format an. Beispiele: me@example.com und +1234567890987.',
        'invalidEmailError': 'E-Mail-Adresse ist nicht gültig',
        'operationNotAllowedError': 'Operation ist nicht erlaubt',
        'weakPasswordError': 'Passwort ist zu schwach',
        'userTokenExpiredError': 'Benutzer-Token abgelaufen',
        'invalidPhoneNumberError':
            'Bitte geben Sie die Telefonnummern im internationalen Format an, beginnend mit „+“ und der Landesvorwahl.',
        'invalidActionCodeError': 'Aktion-Code ist nicht gültig',
        'networkRequestFailedError': 'Netzwerkanfrage fehlgeschlagen',
        'tooManyRequestsError': 'Zu viele Anfragen',
        'acceptTermsAndConditionsError':
            'Bitte akzeptieren Sie die Geschäftsbedingungen und bestätigen Sie die Datenschutzrichtlinie.',
        'acceptAIConsentError':
            'Bitte erkennen Sie an, dass die Beratungen mit einer KI und nicht mit einem lizenzierten medizinischen Fachpersonal erfolgen.',
        'emailOrPhoneError': 'E-Mail-Adresse oder Telefonnummer-Fehler',
        'passwordError': 'Passwort-Fehler',
        'unknownError': 'Unbekannter Fehler',
        'googleSSOError': 'Google SSO-Fehler',
        'emailAlreadyInUse':
            'Die Telefonnummer ist bereits von einem anderen Konto verwendet',
        'invalidCredentialError': 'Die Anmeldedaten sind ungültig.',
        'invalidAppCredentialError': 'Ungültige Anmeldeinformationen der App',
        'invalidVerificationCodeError': 'Ungültiger Bestätigungscode',
        'other': 'Unbekannter Fehler',
      },
    );
    return '$_temp0';
  }

  @override
  String get bugReportSentText => 'Fehlerbericht wurde erfolgreich gesendet.';
}
